--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "localforage": "^1.10.0",
     "mime-types": "^3.0.1",
     "nostr-tools": "^2.15.0",
+    "quill": "^1.3.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sortablejs": "^1.15.6",
